# sequence-alignment

./: .gitignore  CMakeLists.txt  Makefile  SequenceAlignment.cpp  SequenceAlignment.h  SequenceAlignment.hpp  SequenceGen.cpp  SequenceGen.h  basic.cpp  basic.sh  batch_test.sh  dynamic_programming.cpp  dynamic_programming_algorithm.cpp  dynamic_programming_algorithm.h  efficient.cpp  efficient.sh  main.cpp  sequence_alignment.cpp  sequence_gen.cpp  sequence_gen.h  sequence_utils.cpp  sequence_utils.h
data/: input1.txt  input10.txt  input11.txt  input12.txt  input13.txt  input14.txt  input15.txt  input23040.txt  input3.txt  input4.txt  input7.txt  input8.txt  input9.txt
legacy/: dynamic_programming_algorithm.h
result/: trace_back1.txt  trace_back2.txt
